[workspace]
resolver = "2"
default-members = [
   "main",
]
members = [
   "main",
   "bin/ffsh",
   "lib/base",
   "lib/springboard",
   "lib/springboard/base",
   "lib/springboard/builder",
   "lib/springboard/builder/bin/springboard-efi",
   "lib/springboard/builder/bin/springboard-legacy"
]

[workspace.package]
description = "An experimental operating system, for science!"
documentation = "https://mbp2.blog/src/@trident"
edition = "2021"
name = "trident3"
repository = "https://github.com/azyklus/sys3"
version = "3.0.1"

[workspace.dependencies]
anyhow = "1.0.75"
base = { path = "./lib/base", version = "3.0.1" }
spin = { version = "0.9.8", features=["spin_mutex"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
