[package]
description = "Trident 3 kernel module"
documentation.workspace = true
edition.workspace = true
name = "trident3-main"
repository.workspace = true
version.workspace = true

[[bin]]
name = "t3_main"
path = "index.rs"

[dependencies]
trident3-base.workspace = true
springboard-api = { git = "https://github.com/azyklus/springboard" }
