[package]
description = "Trident 3 kernel module"
documentation.workspace = true
edition.workspace = true
name = "trident3-main"
repository.workspace = true
version.workspace = true

[[bin]]
name = "t3_main"
path = "index.rs"

[dependencies]
acpi = "5.0.0"
springboard-api.workspace = true
trident3-base.workspace = true
x86_64 = "0.14.11"
