[package]
description = "Trident 3 kernel module"
documentation.workspace = true
edition.workspace = true
name = "trident3-main"
repository.workspace = true
version.workspace = true

[[bin]]
name = "t3_main"
path = "index.rs"

[dependencies]
acpi = "5.0.0"
springboard-api.workspace = true
trident3-base.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies.x86_64]
version = "0.14.11"

[target.'cfg(target_arch = "x86_64")'.dependencies.x86]
version = "0.52.0"
default-features = false
