[package]
build="build.rs"
description = "Foundation runtime library for Trident 3"
edition.workspace = true
name = "trident3-base"
readme = "../../readme.md"
version.workspace = true

[lib]
name="base"
path="index.rs"

[dependencies]
cfg-if = "1.0.0"
rustc-std-workspace-core = { version="1.0.0", optional=true }
compiler_builtins = { version="0.1", optional=true }
spin.workspace = true

[features]
allocators=[]
rustc-dep-of-std = [
   "rustc-std-workspace-core",
   "compiler_builtins",
   "cfg-if/rustc-dep-of-std"
]
