[package]
name = "trident3-test"
description.workspace = true
documentation.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "t3_test"
path = "index.rs"

[dependencies]
strip-ansi-escapes = "0.2.0"
