[package]
name = "springboard-base"
description.workspace = true
documentation.workspace = true
edition.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "springboard_base"
path = "index.rs"

[dependencies]
