[package]
description = "EFI and BIOS diskimage builders for Springboard"
name = "springboard-builder"
version.workspace = true
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "springboard_builder"
path = "index.rs"

[features]
default=["bios", "uefi"]
bios=["dep:mbrman"]
uefi=["dep:gpt"]

[dependencies]
anyhow.workspace = true
base.workspace = true
fatfs = { version = "0.3.4", default-features = false, features = [
   "std",
   "alloc",
] }
gpt = { version = "3.0.0", optional = true }
mbrman = { version = "0.5.1", optional = true }
serde_json = "1.0.108"
springboard = { path="..", version="3.0.1" }
tempfile = "3.8.1"
